--- a/views/admin/UserDetails/users.ejs
+++ b/views/admin/UserDetails/users.ejs
@@ -248,11 +248,11 @@
           <!-- partial:../../partials/_footer.html -->
           <footer class="footer">
             <div class="container-fluid clearfix">
-              <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright ©
-                bootstrapdash.com 2020</span>
-              <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free <a
-                  href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">Bootstrap admin
-                  template</a> from Bootstrapdash.com</span>
+              <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">kiona ©
+                kiona.com 2020</span>
+              <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">  <a
+                  href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">kiona admin
+                  </a>  kiona.com</span>
             </div>
           </footer>
           <!-- partial -->
