--- a/views/admin/order/orderDetails.ejs
+++ b/views/admin/order/orderDetails.ejs
@@ -136,114 +136,12 @@
               <h3 class="page-title">  Ordered Details </h3>
               <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href='/admin/order'> Ordered Details </a></li>
+                  <li class="breadcrumb-item"><a href=''> Ordered Details </a></li>
                   <li class="breadcrumb-item active" aria-current="page"> Ordered Details </li>
                 </ol>
               </nav>
             </div>
             <div class="row">
-              <div class="col-lg-6 grid-margin stretch-card">
-                <div class="card">
-                  <div class="card-body">
-                    <h4 class="card-title">Basic Table</h4>
-                    <p class="card-description"> Add class <code>.table</code>
-                    </p>
-                    <table class="table">
-                      <thead>
-                        <tr>
-                          <th>Profile</th>
-                          <th>VatNo.</th>
-                          <th>Created</th>
-                          <th>Status</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td>Jacob</td>
-                          <td>53275531</td>
-                          <td>12 May 2017</td>
-                          <td><label class="badge badge-danger">Pending</label></td>
-                        </tr>
-                        <tr>
-                          <td>Messsy</td>
-                          <td>53275532</td>
-                          <td>15 May 2017</td>
-                          <td><label class="badge badge-warning">In progress</label></td>
-                        </tr>
-                        <tr>
-                          <td>John</td>
-                          <td>53275533</td>
-                          <td>14 May 2017</td>
-                          <td><label class="badge badge-info">Fixed</label></td>
-                        </tr>
-                        <tr>
-                          <td>Peter</td>
-                          <td>53275534</td>
-                          <td>16 May 2017</td>
-                          <td><label class="badge badge-success">Completed</label></td>
-                        </tr>
-                        <tr>
-                          <td>Dave</td>
-                          <td>53275535</td>
-                          <td>20 May 2017</td>
-                          <td><label class="badge badge-warning">In progress</label></td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
-              </div>
-              <div class="col-lg-6 grid-margin stretch-card">
-                <div class="card">
-                  <div class="card-body">
-                    <h4 class="card-title">Hoverable Table</h4>
-                    <p class="card-description"> Add class <code>.table-hover</code>
-                    </p>
-                    <table class="table table-hover">
-                      <thead>
-                        <tr>
-                          <th>User</th>
-                          <th>Product</th>
-                          <th>Sale</th>
-                          <th>Status</th>
-                        </tr>
-                      </thead>
-                      <tbody>
-                        <tr>
-                          <td>Jacob</td>
-                          <td>Photoshop</td>
-                          <td class="text-danger"> 28.76% <i class="mdi mdi-arrow-down"></i></td>
-                          <td><label class="badge badge-danger">Pending</label></td>
-                        </tr>
-                        <tr>
-                          <td>Messsy</td>
-                          <td>Flash</td>
-                          <td class="text-danger"> 21.06% <i class="mdi mdi-arrow-down"></i></td>
-                          <td><label class="badge badge-warning">In progress</label></td>
-                        </tr>
-                        <tr>
-                          <td>John</td>
-                          <td>Premier</td>
-                          <td class="text-danger"> 35.00% <i class="mdi mdi-arrow-down"></i></td>
-                          <td><label class="badge badge-info">Fixed</label></td>
-                        </tr>
-                        <tr>
-                          <td>Peter</td>
-                          <td>After effects</td>
-                          <td class="text-success"> 82.00% <i class="mdi mdi-arrow-up"></i></td>
-                          <td><label class="badge badge-success">Completed</label></td>
-                        </tr>
-                        <tr>
-                          <td>Dave</td>
-                          <td>53275535</td>
-                          <td class="text-success"> 98.05% <i class="mdi mdi-arrow-up"></i></td>
-                          <td><label class="badge badge-warning">In progress</label></td>
-                        </tr>
-                      </tbody>
-                    </table>
-                  </div>
-                </div>
-              </div>
               <div class="col-md-4 grid-margin stretch-card">
                 <div class="card">
                   <div class="card-body">
@@ -265,14 +163,10 @@
                         <h4 class="card-title"> Delivery Address </h4>
                         <p class="card-description">  <%= order?.address?.name %> <code> <%= order?.address?.addressType %> </code> </p>
                         <div class="template-demo d-flex justify-content-between flex-nowrap">
-
                             <p class="card-description">  <%= order?.address?.locality %>,<%= order?.address?.address %>,<%= order?.address?.city %>, <%= order?.address?.state %> - <%= order?.address?.pincode %>  </p>
-                          
                         </div>
                         <div class="template-demo d-flex justify-content-between flex-nowrap">
-
                             <p class="card-description"> Mobile No: <%= order?.address?.mobile %></p>
-
                         </div>
                         <div class="template-demo d-flex justify-content-between flex-nowrap mt-4">
                           
@@ -300,6 +194,7 @@
                           <th> product Price </th>
                           <th> Quantity </th>
                           <th> Total </th>
+                          <th> Reason </th>
                           <th> Status </th>
                           <th> Manage </th>
                         </tr>
@@ -316,22 +211,51 @@
                               <td> $ <%= order?.orderItems[i]?.productPrice %> </td>
                               <td> <%= order?.orderItems[i]?.cartQuantity %> </td>
                               <td> $ <%= order?.orderItems[i]?.totalPrice %> </td>
+
                               <td>
-                                <%= order.orderItems[i]._id %>
+                              <% if(order?.orderItems[i]?.orderStatus === "Cancelled"){ %>
+                                 <code><%= order?.orderItems[i]?.cancelReason %></code>
+                              <% } else if ( order?.orderItems[i]?.orderStatus === "Returned" ) { %>
+                                <code><%= order?.orderItems[i]?.returnReason %></code>
 
+                              <% } %>
+                              </td>
+                              
+                              <td>
 
+                                <% if( order?.orderItems[i]?.orderStatus === "Ordered" ){ %>
+                                  <label class="badge badge-warning"> Ordered </label>
+                                <% } else if( order?.orderItems[i]?.orderStatus === "Shipped" ) { %>
+                                  <label class="badge badge-info"> Shipped </label>
+                                <% } else if( order?.orderItems[i]?.orderStatus === "Delivered" ) { %>
+                                  <label class="badge badge-success"> Delivered </label>
+                                <% } else if( order?.orderItems[i]?.orderStatus === "Cancelled" ) { %>
+                                  <label class="badge badge-danger"> Cancelled </label>
+                                <% } else if( order?.orderItems[i]?.orderStatus === "Returned" ) { %>
+                                  <label class="badge badge-dark"> Returned </label>
+                                <% } %> %>
+                                
                               </td>
                               <td>
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown">Status</button>
-                                    <div class="dropdown-menu">
-                                        <button onclick="status('<%= order.orderItems[i]._id %>')" > udnkd</button>
-                                    <a class="dropdown-item" onclick="status('<%= order.orderItems[i]._id %>')" > <%= order.orderItems[i].orderStatus %> </a>
-                                    <a class="dropdown-item" href="<%= order.orderItems[i]._id %>" > Shipped </a>
-                                    <a class="dropdown-item" href="<%= order.orderItems[i]._id %>"> Delivered </a>
-                                    <a class="dropdown-item" href="<%= order.orderItems[i]._id %>"> Cancelled </a>
-                                    </div>
+
+                              <% if(order.orderItems[i].orderStatus === 'Ordered' || order.orderItems[i].orderStatus === 'Shipped' ){ %>
+                                
+                                <div class="size-204 respon6-next">
+                                <div class="rs1-select2 bor8 bg0 dropdown">
+                                  <button class="btn btn-warning dropdown-toggle" type="button" data-toggle="dropdown">
+                                      Status
+                                  </button>
+                                  <div class="dropdown-menu">
+                                    <button onclick="status('<%= order.orderItems[i]._id %>','Ordered')" class="dropdown-item">Ordered</button>
+                                    <button onclick="status('<%= order.orderItems[i]._id %>','Shipped')" class="dropdown-item">Shipped</button>
+                                    <button onclick="status('<%= order.orderItems[i]._id %>','Delivered')" class="dropdown-item">Delivered</button>
+                                    <button onclick="status('<%= order.orderItems[i]._id %>','Cancelled')" class="dropdown-item">Cancelled</button>
+                                  </div>
                                 </div>
+                              </div>
+                              
+                              <% } %>
+                               
                              </td>
                             </tr>
 
@@ -349,8 +273,8 @@
           <!-- partial:../../partials/_footer.html -->
           <footer class="footer">
             <div class="container-fluid clearfix">
-              <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">Copyright © bootstrapdash.com 2020</span>
-              <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center"> Free <a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">Bootstrap admin template</a> from Bootstrapdash.com</span>
+              <span class="text-muted d-block text-center text-sm-left d-sm-inline-block">kiona © kiona.com 2020</span>
+              <span class="float-none float-sm-right d-block mt-1 mt-sm-0 text-center">  <a href="https://www.bootstrapdash.com/bootstrap-admin-template/" target="_blank">kiona admin</a>  kiona.com</span>
             </div>
           </footer>
           <!-- partial -->
@@ -374,17 +298,17 @@
     <!-- End custom js for this page -->
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-
     <script>
-        console.log('kooi');
-      async function status(orderItemId){
-        try {
-            console.log(prodcutId);
-          await axios.post('/orderDetails/updateStatus',{prodcutId:orderItemId})
-        } catch (error) {
-          console.log(error.message);
+        async function status(orderItemId,value) {
+            try {
+                const response = await axios.post('/admin/orderDetails/updateStatus', { id:orderItemId, value });
+                if(response){
+                  window.location.reload();
+                }
+            } catch (error) {
+                console.log(error.message);
+            }
         }
-      }
     </script>
 
 
