--- a/views/users/Profile/editAddress.ejs
+++ b/views/users/Profile/editAddress.ejs
@@ -202,7 +202,7 @@
                                 <input type="text" name="" id="addressId" value="<%= address._id %>" hidden>
 
                                 <!-- Save changes button-->
-                                <a href="/address"> <button class="btn btn-danger" type="button">Back</button> </a>
+                                <a href="/address" style="text-decoration: none;"> <button class="btn btn-danger" type="button">Back</button> </a>
                                 <button class="btn btn-primary" type="submit">Save Address</button>
                             </form>
                         </div>
