--- a/views/users/checkout/checkout.ejs
+++ b/views/users/checkout/checkout.ejs
@@ -245,8 +245,9 @@
                     icon: 'success',
                     title: 'Confirmed!',
                     text: response.data.message
-                });
-                window.location.href
+                }).then(()=>{
+					window.location.href = '/orderSuccess'
+				})
             } else {
                 Swal.fire({
                     icon: 'error',
