--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -290,36 +290,36 @@
 
 			<div class="header-cart-content flex-w js-pscroll">
 				<ul class="header-cart-wrapitem w-full">
-					
-					<% let totalAmout=0 %>
-
-					<% for(let i=0 ; i<cartProduct.length ; i++){ %>
-
-						<li class="header-cart-item flex-w flex-t m-b-12">
-							<div class="header-cart-item-img">
-								<img src="/Photos/product/<%= cartProduct[i].productDetails[0].image[0] %>"
-									alt="IMG">
-							</div>
-
-							<div class="header-cart-item-txt p-t-8">
-								<a href="/productDetails?productId=<%= cartProduct[i].productDetails[0]._id %>" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
-									<%= cartProduct[i].productDetails[0].name %>
-								</a>
-
-								<span class="header-cart-item-info">
-									<%= cartProduct[i].productDetails[0].price %>
-								</span>
-							</div>
-
-						</li>
-						<% totalAmout +=cartProduct[i].productDetails[0].price * cartProduct[i].cartItems.quantity%>
+					<% let totalAmount = 0; %>
+				
+					<% if (cartProduct.length === 0) { %>
+						<img src="/empty%20cart.jpg" alt="Empty Cart" style="width: 200px; height: auto;">
+						<% } else { %>
+						<% for (let i = 0; i < cartProduct.length; i++) { %>
+							<li class="header-cart-item flex-w flex-t m-b-12">
+								<div class="header-cart-item-img">
+									<img src="/Photos/product/<%= cartProduct[i].productDetails[0].image[0] %>" alt="IMG">
+								</div>
+				
+								<div class="header-cart-item-txt p-t-8">
+									<a href="/productDetails?productId=<%= cartProduct[i].productDetails[0]._id %>" class="header-cart-item-name m-b-18 hov-cl1 trans-04">
+										<%= cartProduct[i].productDetails[0].name %>
+									</a>
+				
+									<span class="header-cart-item-info">
+										<%= cartProduct[i].productDetails[0].price %>
+									</span>
+								</div>
+							</li>
+							<% totalAmount += cartProduct[i].productDetails[0].price * cartProduct[i].cartItems.quantity %>
+						<% } %>
 					<% } %>
-
 				</ul>
+				
 
 				<div class="w-full">
 					<div class="header-cart-total w-full p-tb-40">
-						Total: $ <%= totalAmout %>
+						Total: $ <%= totalAmount %>
 					</div>
 
 					<div class="header-cart-buttons flex-w w-full">
